--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "gatsby-plugin-react-helmet": "^3.1.16",
     "gatsby-plugin-sharp": "^2.3.5",
     "gatsby-remark-autolink-headers": "^2.1.21",
+    "gatsby-remark-custom-blocks": "^2.1.21",
     "gatsby-remark-images": "^3.1.39",
     "gatsby-remark-images-zoom": "^1.1.0",
+    "gatsby-remark-prismjs": "^3.3.29",
     "gatsby-source-filesystem": "^2.1.40",
     "gatsby-transformer-remark": "^2.6.45",
     "gatsby-transformer-sharp": "^2.3.7",
+    "prismjs": "^1.18.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
