--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.0.1",
   "author": "Kelvin Fichter <kelvin.fichter@gmail.com>",
   "dependencies": {
+    "@wardpeet/gatsby-plugin-static-site": "^0.2.1",
     "gatsby": "^2.18.12",
     "gatsby-image": "^2.2.34",
     "gatsby-plugin-catch-links": "^2.1.21",
