feat: refactor to support multiple languages

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "repository": "/the-eth2-book",
   "scripts": {
-    "dev": "vuepress dev src",
-    "build": "vuepress build src"
+    "dev": "vuepress dev .",
+    "build": "vuepress build ."
   },
   "license": "MIT",
   "devDependencies": {
